# screeny

./: .gitignore  CLAUDE.md  README.md  context.md  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
.ai/: next-steps.md
.ai/planning/2026-04-12 e2e-tests/: findings.md  plan.md  progress.md  questions.md
.ai/planning/2026-04-12 studio-mvp/: findings.md  plan.md  progress.md  questions.md
.ai/planning/2026-04-13 fix-open-dialog-crash/: findings.md  plan.md  questions.md
.ai/planning/2026-04-14 fix-open-dialog-crash-root-cause/: findings.md  plan.md  progress.md  questions.md
.ai/planning/2026-04-15 gif-loading-perf/: findings.md  (+4 more)
.ai/research/: 2026-04-17 claude-tech-stack.md  2026-04-18 test-warnings.md  2026-04-21 viewer-grid-edge-alignment.md
.claude/: settings.json
.github/workflows/: linux-portable.yml
.pi/: command-policy.json5
.run/: Run tauri dev.run.xml
.zed/: tasks.json
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/src/: dialog.rs  e2e.rs  lib.rs  main.rs  testing.rs
src-tauri/src/gif/: decode.rs  encode.rs  mod.rs
src-tauri/src/gif/decode/: composite.rs  frame_count.rs  mod.rs  progress.rs
src-tauri/tests/: generate_fixture.rs
src/lib/: actions.test.ts  actions.ts  canvas-fit.ts  frameEditing.ts  frameSelection.ts  help-keybindings.ts  keyboardPolicy.test.ts  paint.ts  projectLifecycle.svelte.ts  projectLifecycle.test.ts  projectLifecycle.ts  projectOpen.test.ts  projectOpen.ts  splashscreen.test.ts  tauriGifBackend.ts  theme.css  types.ts  viewer-fit.test.ts  viewer-fit.ts
src/routes/: +page.svelte  page.test.ts
static/: splashscreen.html
tests/e2e/: helpers.ts  tsconfig.json  wdio.conf.ts
tests/fixtures/: create-dedup-fixture.mjs  create-dedup-selection-fixture.mjs  create-initial-fit-fixtures.mjs
(+135 files in other folders)
