[package]
name = "screeny"
version = "0.1.1"
description = "A cross-platform GIF recording and editing application built with Tauri, SvelteKit, TypeScript, and Rust."
authors = ["Kim Goetzke"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screeny_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
gif = "0.13"
gifski = "1"
imgref = "1"
rgb = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
